--- a/lars6653/styles.css
+++ b/lars6653/styles.css
@@ -108,3 +108,9 @@ div.centered {
     justify-content: center;
     align-items: center;
 }
+
+div.content {
+    margin-left: 5%;
+    margin-bottom: 5%;
+    margin-right: 5%;
+}
